--- a/AjaxProject/WebContent/forms/signup.html
+++ b/AjaxProject/WebContent/forms/signup.html
@@ -98,7 +98,7 @@ button:hover {
     <p>Please fill in this form to create an account.</p>
     <hr>
 
-    <label for="last_name"><b>last_name</b></label>
+    <label for="last_name"><b>name</b></label>
     <input type="text" name="last_name" value="Kim" required>
     
  	<label for="email"><b>Email</b></label>
@@ -106,7 +106,6 @@ button:hover {
    
     <label for="hire_date"><b>hire_date</b></label>
     <input type="date"  name="hire_date" value="2020-07-15" required><br><br>
-    
 
     <label for="job_id"><b>job_id</b></label>
     <!--   <input type="text" name="job_id" value="IT_PROG" required> -->
